Fix Railway Python deployment configuration
- Update nixpacks.toml to properly install Python and pip
- Add railway.toml for explicit build configuration
- Add runtime.txt to specify Python version
- Skip Node.js build phase explicitly

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ["python311", "gcc"]
+nixPkgs = ["python311", "python311Packages.pip", "gcc"]
 
 [phases.install]
-cmds = ["cd railway-api && pip install -r requirements.txt"]
+cmds = ["cd railway-api && python -m pip install -r requirements.txt"]
+
+[phases.build]
+cmds = ["echo 'Skipping Node.js build'"]
 
 [start]
-cmd = "cd railway-api && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "cd railway-api && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
