--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,15 @@
+[providers]
+python = true
+
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip", "gcc"]
+nixPkgs = ["python311", "python311Packages.pip", "python311Packages.setuptools"]
 
 [phases.install]
-cmds = ["cd railway-api && python -m pip install -r requirements.txt"]
-
-[phases.build]
-cmds = ["echo 'Skipping Node.js build'"]
+cmds = [
+    "cd railway-api",
+    "pip install --upgrade pip",
+    "pip install -r requirements.txt"
+]
 
 [start]
-cmd = "cd railway-api && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "cd railway-api && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
