--- a/package.json
+++ b/package.json
@@ -10,17 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/csv-parse": "^1.1.12",
-    "@types/csv-stringify": "^1.4.3",
-    "@types/jsdom": "^21.1.7",
     "autoprefixer": "^10.4.21",
-    "csv-parse": "^6.0.0",
-    "csv-stringify": "^6.6.0",
-    "jsdom": "^26.1.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "uuid": "^11.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20.19.8",
